# rusty-lichess-bot

./: .gitignore  Cargo.toml
src/: engine.rs  main.rs  util.rs
src/engine/: main_engine.rs  random_engine.rs
