[package]
name = "rusty-lichess-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Lichess API wrapper
licheszter = "0.4"
# reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Chess board / legal-move generation
shakmaty = "0.29"

# Helpers
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"                              # so I can define async functions in trait definitions
rand = "0.9"
futures-util = "0.3.31"
futures = "0.3"
log = "0.4"
env_logger = "0.11"

# [patch.crates-io]
# licheszter = { git = "https://github.com/Matzeall/licheszter", branch = "main" }
